adding bytebuddy flag