@@ -56,4 +56,4 @@ retry_with_backoff 3 10 \
     -Dmaven.javadoc.skip=true \
     -Dclirr.skip=true
 
-mvn -B dependency:analyze -DfailOnWarning=true
+mvn -B dependency:analyze -DfailOnWarning=true -Dnet.bytebuddy.experimental=true
